; ModuleID = '/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-dns-stream.c_on_stream_timeout.c'
source_filename = "/home/carl/AnghaBench/systemd/src/resolve/extr_resolved-dns-stream.c_on_stream_timeout.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ETIMEDOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32, i8*)* @on_stream_timeout to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @on_stream_timeout(i32* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to i32*
  store i32* %9, i32** %7, align 8
  %10 = load i32*, i32** %7, align 8
  %11 = call i32 @assert(i32* %10)
  %12 = load i32*, i32** %7, align 8
  %13 = load i32, i32* @ETIMEDOUT, align 4
  %14 = call i32 @dns_stream_complete(i32* %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @assert(i32*) #1

declare dso_local i32 @dns_stream_complete(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
